<resources>
    <string name="app_name">Game of Thrones Quiz</string>
    <string name="description">Test your knowledge of Game of Thrones in this simple quiz. Simple but tricky!</string>
    <string name="question1">1. Which house does the sigil in the picture represents?</string>
    <string name="stark">Stark</string>
    <string name="tully">Tully</string>
    <string name="bolton">Bolton</string>
    <string name="umber">Umber</string>
    <string name="question2">2. What are the words of House Stark?</string>
    <string name="hint1">It"'"s 3 words&#8230;</string>
    <string name="winteriscoming">Winter is coming</string>
    <string name="question3">3. What is the name of this character?</string>
    <string name="hint2">First Name</string>
    <string name="daenerys">Daenerys</string>
    <string name="question4">4. How many dragons does the character in the previous question have?</string>
    <string name="hint3">Number</string>
    <string name="number_of_dragons">3</string>
    <string name="question5">5. Which of the following have been kings of Westeros?</string>
    <string name="robert">Robert Baratheon</string>
    <string name="jonSnow">Jon Snow</string>
    <string name="joffrey">Joffrey Baratheon</string>
    <string name="jaime">Jaime Lannister</string>
    <string name="question6">6. Which King was killed by a boar?</string>
    <string name="aerys">Aerys II Targaryen</string>
    <string name="question7">7. Which house was known by riding on the back of dragons?</string>
    <string name="targaryen">Targaryen</string>
    <string name="lannister">Lannister</string>
    <string name="question8">8. Hodor?</string>
    <string name="hodor1">Hodor.</string>
    <string name="hodor2">Hodor!</string>
    <string name="hodor3">Hodor?</string>
    <string name="hodor4">Hodor!!!</string>
    <string name="question9">9. What are the words of House Lannister which is represented in the picture?</string>
    <string name="hearmeroar">Hear me Roar</string>
    <string name="debtsalwayspayed">A Lannister always pays his debts</string>
    <string name="question10">10. With which one of these was Margaery Tyrell betrothed to?</string>
    <string name="renly">Renly Baratheon</string>
    <string name="tommen">Tommen Baratheon</string>
    <string name="stannis">Stannis Baratheon</string>
    <string name="submit">Submit answers</string>
    <string name="reset">Reset Quiz</string>
    <string name="goodluck">Good Luck!</string>
</resources>