<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.android.com.gameofthronesquizv2.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/jonsnow"
        android:scaleType="centerCrop"/>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            style="@style/linearlayoutstyle">
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                android:layout_marginBottom="8dp"
                card_view:cardBackgroundColor="#80303030">
                <TextView
                    style="@style/textviewstyle"
                    android:text="@string/description" />
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodluck"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question1"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/housestarksigil"
                        android:layout_gravity="center"/>
                    <RadioGroup
                        android:id="@+id/group_q_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <RadioButton
                            android:id="@+id/umber"
                            style="@style/radiobutton"
                            android:text="@string/umber"/>
                        <RadioButton
                            android:id="@+id/bolton"
                            style="@style/radiobutton"
                            android:text="@string/bolton"/>
                        <RadioButton
                            android:id="@+id/stark"
                            style="@style/radiobutton"
                            android:text="@string/stark"/>
                        <RadioButton
                            android:id="@+id/tully"
                            style="@style/radiobutton"
                            android:text="@string/tully"/>
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question2"/>
                    <EditText
                        style="@style/editText"
                        android:id="@+id/winteriscoming"
                        android:hint="@string/hint1"
                        android:maxLines="1"
                        android:inputType="textCapWords"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question3"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:src="@drawable/daenerys"
                        android:scaleType="centerCrop"/>
                    <EditText
                        style="@style/editText"
                        android:id="@+id/daenerys"
                        android:hint="@string/hint2"
                        android:inputType="textCapWords"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question4"/>
                    <EditText
                        style="@style/editText"
                        android:id="@+id/numberofdragons"
                        android:hint="@string/hint3"
                        android:inputType="number"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question5"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <CheckBox
                                android:id="@+id/checkbox1"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/robert"/>
                            <CheckBox
                                android:id="@+id/checkbox2"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/jonSnow"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <CheckBox
                                android:id="@+id/checkbox3"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/joffrey"/>
                            <CheckBox
                                android:id="@+id/checkbox4"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/jaime"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question6"/>
                    <RadioGroup
                        android:id="@+id/group_q_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <RadioButton
                            android:id="@+id/aerys"
                            style="@style/radiobutton"
                            android:text="@string/aerys"/>
                        <RadioButton
                            android:id="@+id/robert"
                            style="@style/radiobutton"
                            android:text="@string/robert"/>
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question7"/>
                    <RadioGroup
                        android:id="@+id/group_q_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <RadioButton
                            android:id="@+id/targaryen"
                            style="@style/radiobutton"
                            android:text="@string/targaryen"/>
                        <RadioButton
                            android:id="@+id/lannister"
                            style="@style/radiobutton"
                            android:text="@string/lannister"/>
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question8"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <CheckBox
                                android:id="@+id/hodor1"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hodor1"/>
                            <CheckBox
                                android:id="@+id/hodor2"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hodor2"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <CheckBox
                                android:id="@+id/hodor3"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hodor3"/>
                            <CheckBox
                                android:id="@+id/hodor4"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hodor4"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question9"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/houselannister"/>
                    <RadioGroup
                        android:id="@+id/group_q_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/hearmeroar"
                            style="@style/radiobutton"
                            android:text="@string/hearmeroar"/>
                        <RadioButton
                            android:id="@+id/debtspayed"
                            style="@style/radiobutton"
                            android:text="@string/debtsalwayspayed"/>
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/cardview"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="#80303030">
                <LinearLayout
                    style="@style/linearlayoutstyle">
                    <TextView
                        style="@style/textviewstyle"
                        android:text="@string/question10"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <CheckBox
                                android:id="@+id/renly"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/renly"/>
                            <CheckBox
                                android:id="@+id/tommen"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tommen"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <CheckBox
                                android:id="@+id/joffrey"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/joffrey"/>
                            <CheckBox
                                android:id="@+id/stannis"
                                style="@style/radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stannis"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <Button
                style="@style/header"
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80303030"
                android:textColor="#A6FFFFFF"
                android:text="@string/submit"
                android:onClick="submitAnswers"/>
            <Button
                android:id="@+id/reset"
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#80303030"
                android:textColor="#A6FFFFFF"
                android:text="@string/reset"
                android:onClick="resetQuiz"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
